chore: update .gitignore with standard Python patterns

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,17 @@ wheels/
 
 # Virtual environments
 .venv
+venv/
+ENV/
+
+# Environment variables
+.env
+
+# IDE files
+.vscode/
+.idea/
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
